feat(core): Complete technical debt resolution and documentation overhaul
This commit represents a comprehensive sprint addressing all high-priority
technical debt items and documentation tasks for the InfoGraphix-GenAI project.

## Technical Debt Resolution (TECHNICAL-DEBT.md)

### State Management Refactoring
- Extract `useVersionHistory` hook: IndexedDB-backed version management with
  auto-cleanup (max 50 versions), CRUD operations, and storage quota monitoring
- Extract `useGeneration` hook: Two-phase AI generation workflow encapsulating
  analysis → generation state machine with error handling
- Extract `useFormPersistence` hook: Debounced auto-save (500ms) with schema
  validation against TypeScript enums, null-safe fallback to defaults
- Hooks exported via `hooks/index.ts` barrel file for clean imports

### Storage Architecture Overhaul
- Implement `services/storageService.ts` (354 lines): Complete IndexedDB
  abstraction replacing localStorage for large binary data (images)
- Canvas-based image compression with configurable quality/dimensions
- Storage quota monitoring via `navigator.storage.estimate()` API
- Automatic migration utility from legacy localStorage format
- Prevents quota exhaustion issues with base64-encoded images

### Error Boundary Implementation
- New `components/ErrorBoundary.tsx`: Class component with React 18+ error
  boundary pattern, user-friendly fallback UI, optional error callback for
  external logging integration, "Try Again" recovery action

### TailwindCSS Migration (CDN → Build-time)
- Remove CDN script from `index.html`, add build-time compilation
- New `tailwind.config.js`: Content paths, custom dark slate color extensions
- New `postcss.config.js`: @tailwindcss/postcss + autoprefixer integration
- New `styles/main.css` (169 lines): @layer base/components/utilities with
  custom scrollbar, btn-primary/secondary, input-field, card, badges, glass
  effect, animate-in utilities, focus-ring for keyboard navigation

### Accessibi

--- a/index.html
+++ b/index.html
@@ -3,31 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Generate stunning infographics from any topic using AI" />
+    <meta name="theme-color" content="#0f172a" />
     <title>InfoGraphix AI</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
-      body {
-        font-family: 'Inter', sans-serif;
-        background-color: #0f172a;
-        color: #e2e8f0;
-      }
-      /* Custom Scrollbar */
-      ::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #1e293b; 
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #475569; 
-        border-radius: 4px;
-      }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #64748b; 
-      }
-    </style>
+    <!-- Styles loaded via Vite build process -->
   <script type="importmap">
 {
   "imports": {
